fixing on iphone - fixed doesn't work - scroll only

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -128,31 +128,12 @@ a:focus {
   background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
   background: url(../img/olvictory1.jpg) no-repeat top center scroll;
   */
-  background: url(../img/olvictory1.jpg) no-repeat top center fixed;
+  background: url(../img/olvictory1_w_more_sky4.jpg) no-repeat top center fixed;
   background-color: #6291D5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-}
-@media (max-width: 767px) {
-  /*
-  .navbar {
-    margin-bottom: 50px;
-  }
-  */
-  .intro {
-    background-image: (../img/olvictory1.jpg)
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: top center;
-    /*
-    background-position: calc(100% - 20px) center;
-    background-position: top 500px;
-    */
-  }
-  /*
-  */
 }
 .intro .intro-body {
   display: table-cell;
@@ -163,6 +144,40 @@ a:focus {
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
+}
+@media (max-width: 767px) {
+  .intro {
+    padding: 210px 0;
+    background: url(../img/olvictory1_w_more_sky4.jpg) no-repeat center center scroll;
+    background-attachment: scroll;
+  }
+  .download-section {
+    padding: 200px 0;
+    background-attachment: scroll;
+    background: url(../img/inside_old2.png) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+  }
+  .img-spacer2-section {
+    padding: 100px 0;
+    background: url(../img/pius_ix_top.jpg) no-repeat center center scroll;;
+    background-attachment: scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+  }
+  .img-spacer-yote-section {
+    padding: 200px 0;
+    background: url(../img/yote.png) no-repeat center 40px scroll;
+    background-attachment: scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+  }
 }
 @media (min-width: 768px) {
   .intro {
@@ -243,80 +258,52 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
-  width: 100%;
-  padding: 100px 0;
-  color: white;
-  /*
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background: url(../img/stjosephroch84.jpg) no-repeat top center scroll;
-  background: url(../img/olvictory27.jpg) no-repeat center center scroll;
-  background: url(../img/inside_old.png) no-repeat center center scroll;
-  */
-  background: url(../img/inside_old2.png) no-repeat center center fixed;
-  background-color: #6291D5;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
-.img-spacer2-section {
-  width: 100%;
-  padding: 100px 0;
-  color: white;
-  /*
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background: url(../img/stjosephroch84.jpg) no-repeat top center scroll;
-  background: url(../img/olvictory27.jpg) no-repeat center center scroll;
-  background: url(../img/inside_old.png) no-repeat center center scroll;
-  background: url(../img/inside_old.PNG) no-repeat center center fixed;
-  */
-  background: url(../img/piusix_mcquaid.png) no-repeat center 40px fixed;
-  background-position: center 200px center 10px;
-  background-color: #6291D5;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
-.img-spacer-yote-section {
-  width: 100%;
-  height: 400px;
-  padding: 100px 0;
-  color: white;
-  /*
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background: url(../img/stjosephroch84.jpg) no-repeat top center scroll;
-  background: url(../img/olvictory27.jpg) no-repeat center center scroll;
-  background: url(../img/inside_old.png) no-repeat center center scroll;
-  background: url(../img/inside_old.PNG) no-repeat center center fixed;
-  background: url(../img/yote.png) no-repeat center 40px fixed;
-  */
-  background: url(../img/yote.png) no-repeat center 40px fixed;
-  background-position: center 200px center 10px;
-  background-color: #6291D5;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
 #map {
   width: 100%;
   height: 200px;
   margin-top: 100px;
 }
-@media (min-width: 767px) {
+@media (min-width: 768px) {
   .content-section {
     padding-top: 100px;
   }
   .download-section {
     padding: 200px 0;
+    background: url(../img/inside_old2.png) no-repeat center center fixed;
+    width: 100%;
+    color: white;
+    background-color: #6291D5;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
   }
   .img-spacer2-section {
     padding: 200px 0;
+    background: url(../img/piusix_mcquaid.png) no-repeat center center fixed;
+    width: 100%;
+    color: white;
+    background-position: center 200px center 10px;
+    background-color: #6291D5;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
   }
-  .img-yote-section {
-    padding: 400px 0;
+  .img-spacer-yote-section {
+    padding: 200px 0;
+    background: url(../img/yote.png) no-repeat center 40px fixed;
+    width: 100%;
+    /*
+    height: 400px;
+    */
+    color: white;
+    background-position: center 200px center 10px;
+    background-color: #6291D5;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
   }
   #map {
     height: 400px;
